weird spacing fixes

--- a/modules/nyss_imapper/nyss_imapper.css
+++ b/modules/nyss_imapper/nyss_imapper.css
@@ -63,15 +63,15 @@ thead .sorting_asc{background-color:#f1f1f1!important;}
 
 /* IMAP - Table View - Row */
 .imapperbox .imap_checkbox_column{width: 15px !important; }
-.imapperbox .imap_name_column{width: 150px !important; }
+.imapperbox .imap_name_column{width: 190px !important; }
 .imapperbox .imap_name_column.unmatched{width: 200px !important; }
-.imapperbox .imap_subject_column{width: 350px !important; }
-.imapperbox .imap_subject_column.unmatched{width: 250px !important; }
-.imapperbox .imap_date_column{width: 100px !important; }
+.imapperbox .imap_subject_column{width: 320px !important; }
+.imapperbox .imap_subject_column.unmatched{width: 220px !important; }
+.imapperbox .imap_date_column{width: 90px !important; }
 .imapperbox .imap_match_column{width: 0px !important; }
 .imapperbox .imap_forwarder_column{width: 85px !important; }
 .imapperbox .imap_actions_column{width: 90px !important; }
-.imapperbox .imap_actions_column.matched{width: 90px !important; }
+.imapperbox .imap_actions_column.matched{width: 130px !important; }
 .imapperbox .imap_actions_column.unmatched{width: 120px !important; }
 .imapperbox .imap_actions_column span a{float: left; margin: 8px 1px 8px 0; padding: 2px 4px; border-radius: 3px;}
 .imapperbox .imap_actions_column a:hover{background: #fff; }
